--- a/src/app/shop/cart/cart-list/cart-list.component.html
+++ b/src/app/shop/cart/cart-list/cart-list.component.html
@@ -31,6 +31,7 @@
   <div class="loading-process-with-dim-background" *ngIf="addToCartLoading || decreaseCartLoading || deleteFromCartLoading">
     <app-spinner></app-spinner>
   </div>
+  <app-corners></app-corners>
 </div>
 
 
