--- a/src/app/shop/order/orders-list/orders-list.component.html
+++ b/src/app/shop/order/orders-list/orders-list.component.html
@@ -16,4 +16,5 @@
     </header>
     <app-order-item *ngFor="let order of orders" [order]="order"></app-order-item>
   </ng-container>
+  <app-corners></app-corners>
 </div>
