--- a/src/app/shop/products/product-details/product-details.component.html
+++ b/src/app/shop/products/product-details/product-details.component.html
@@ -62,5 +62,6 @@
   <div class="loading-wrapper" *ngIf="productDetailsLoading">
     <app-ripple></app-ripple>
   </div>
+  <app-corners></app-corners>
 </div>
 
