--- a/src/app/shop/wishlist/wishlist.component.html
+++ b/src/app/shop/wishlist/wishlist.component.html
@@ -22,5 +22,6 @@
   <div class="loading-process-with-dim-background" *ngIf="deleteFromWishlistLoading || addToCartLoading">
     <app-spinner></app-spinner>
   </div>
+  <app-corners></app-corners>
 </div>
 
