--- a/src/app/UI/tree/tree.component.scss
+++ b/src/app/UI/tree/tree.component.scss
@@ -10,7 +10,7 @@ ul {
       cursor: pointer;
       .expand-icon {
         display: inline-block;
-        padding-right: 20px;
+        margin-right: 8px;
         width: 8px;
         height: 8px;
         background-image: url('../../../assets/play.svg');
