Fix get user from auth service.

--- a/src/app/auth/login-modal/login-modal.component.html
+++ b/src/app/auth/login-modal/login-modal.component.html
@@ -39,5 +39,6 @@
     </div>
     <div *ngIf="checkErrors()" class="validate-error">{{ checkErrors() }}</div>
     <button type="submit" [disabled]="!appForm.valid" class="btn btn-primary">Login</button>
+    <a href="http://localhost:3000/auth/google">Google</a>
   </div>
 </form>
