Split user object in localStorage into token and user information, make central functions for getting user, username and role.

--- a/src/app/auth/login-modal/login-modal.component.html
+++ b/src/app/auth/login-modal/login-modal.component.html
@@ -39,6 +39,10 @@
     </div>
     <div *ngIf="checkErrors()" class="validate-error">{{ checkErrors() }}</div>
     <button type="submit" [disabled]="!appForm.valid" class="btn btn-primary">Login</button>
-    <a href="http://localhost:3000/auth/google">Google</a>
+    <div class="separate">OR</div>
+    <a href="http://localhost:3000/auth/google" class="social-auth-link">
+      <img src="/assets/google.svg" alt="" class="social-auth-icon">
+      <span class="social-auth-text">Log in with Google</span>
+    </a>
   </div>
 </form>
