--- a/src/app/shop/admin/sizes/sizes-list/sizes-list.component.html
+++ b/src/app/shop/admin/sizes/sizes-list/sizes-list.component.html
@@ -7,10 +7,10 @@
   <div class="button-container">
     <app-button [text]="'Delete selected'" (onClick)="onDeleteSubcategories()" [disabled]="!selectedSubcategories.length"></app-button>
     <div class="button-wrapper">
-      <app-button [text]="'Create new category'" routerLink="./add"></app-button>
+      <app-button [text]="'Create new category'" routerLink="../category/add"></app-button>
     </div>
     <div class="button-wrapper">
-      <app-button [text]="'Add new subcategory'" routerLink="./subcategory-add"></app-button>
+      <app-button [text]="'Add new subcategory'" routerLink="../subcategory/add"></app-button>
     </div>
   </div>
 </div>
