Refactor admin style.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<div class="container">
+<div *ngIf="ifAdminRouter(); else otherRouters">
   <router-outlet></router-outlet>
 </div>
+<ng-template #otherRouters>
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+</ng-template>
 
