--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,6 +61,14 @@ body {
   overflow-x: hidden;
   font-size: 16px;
 }
+.box-with-shadow {
+  background-color: #fff;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.12), 0 1px 5px 0 rgba(0,0,0,.2);
+  border-radius: 5px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 20px 30px 30px;
+}
 .inputfile {
   width: 0.1px;
   height: 0.1px;
