Change the way images are displayed, fix error handling in profile.

--- a/src/app/admin/categories/add-subcategory/add-subcategory.component.html
+++ b/src/app/admin/categories/add-subcategory/add-subcategory.component.html
@@ -18,7 +18,9 @@
         </label>
         <input type="text" class="form-control" name="subcategory" id="adSubcategory" [(ngModel)]="adSubcategory">
       </div>
-      <app-button [text]="'Save subcategory'" (onClick)="onSaveAdSubcategory()" [disabled]="!adSubcategory || !selectedCategory"></app-button>
+      <div class="btn-wrapper">
+        <app-button [text]="'Save subcategory'" (onClick)="onSaveAdSubcategory()" [disabled]="!adSubcategory || !selectedCategory"></app-button>
+      </div>
     </form>
   </ng-template>
 </div>
