--- a/src/app/admin/products/admin-products/admin-products.component.html
+++ b/src/app/admin/products/admin-products/admin-products.component.html
@@ -14,6 +14,6 @@
           (click)="openProductDetails(product.id)"></tr>
     </ng-container>
   </table>
-  <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
+  <pagination-controls *ngIf="products.length > itemsPerPage" (pageChange)="pageChanged($event)"></pagination-controls>
 </div>
 
