--- a/src/app/admin/products/admin-products/admin-products.component.scss
+++ b/src/app/admin/products/admin-products/admin-products.component.scss
@@ -6,7 +6,32 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: calc(100% - 20px);
+  width: calc(100% - 10px);
+  .btn-add {
+    width: 56px;
+    height: 56px;
+    padding: 0;
+    position: fixed;
+    right: 30px;
+    bottom: 30px;
+    cursor: pointer;
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 56px;
+    overflow: hidden;
+    z-index: 10;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    background-color: $red_color;
+    border-radius: 50%;
+    i {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+    }
+  }
 }
 
 table {
