--- a/src/app/admin/products/edit-product/edit-product.component.scss
+++ b/src/app/admin/products/edit-product/edit-product.component.scss
@@ -1,9 +1,7 @@
-@import '../../../../variables.scss';
+@import '../../../../variables';
 
 form {
-  max-width: 800px;
-  margin: 50px auto 0;
-  width: 60%;
+  width: 80%;
   .form-control:focus {
     box-shadow: 0 0 0 1px rgba(0,123,255,.25);
   }
