--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -25,6 +25,9 @@
   <div class="admin-content">
     <header class="admin-header">
       <app-breadcrumbs></app-breadcrumbs>
+      <button (click)="onLogout()">
+        <img src="assets/logout.svg" alt="" class="logout-icon">
+      </button>
     </header>
     <router-outlet></router-outlet>
   </div>
