--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -85,13 +85,23 @@
       padding-left: 30px;
       display: flex;
       align-items: center;
-      justify-content: flex-start;
+      justify-content: space-between;
       margin-bottom: 5px;
       position: fixed;
       top: 0;
       right: 0;
       width: calc(100% - 300px);
       z-index: 2;
+      button {
+        border: none;
+        background-color: transparent;
+        padding-right: 20px;
+        cursor: pointer;
+        .logout-icon {
+          width: 20px;
+          height: 20px;
+        }
+      }
     }
   }
 }
