--- a/src/app/admin/products/admin-product/admin-product.component.scss
+++ b/src/app/admin/products/admin-product/admin-product.component.scss
@@ -8,3 +8,41 @@ td {
     object-fit: cover;
   }
 }
+.tooltiptext {
+  visibility: hidden;
+  background-color: black;
+  color: #fff;
+  left: -5px;
+  top: 100%;
+  text-align: center;
+  border-radius: 6px;
+  padding: 3px 5px;
+  position: absolute;
+  z-index: 1;
+}
+.qnt-wrapper{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  div {
+    text-align: center;
+    flex: 1;
+  }
+  .btn-edit {
+    display: inline-block;
+    cursor: pointer;
+    background-color: #EA7884;
+    border: 1px solid grey;
+    border-radius: 5px;
+    margin-left: 5px;
+    padding: 2px 5px;
+    position: relative;
+    &:hover .tooltiptext {
+      visibility: visible;
+    }
+    img {
+      width: 15px;
+      height: 15px;
+    }
+  }
+}
