Implement getting sizes, adding quantity of product to stock and updating these values.

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -19,6 +19,12 @@
           <span class="nav-link-text">Products</span>
         </a>
       </li>
+      <li class="nav-item"  routerLinkActive="active">
+        <a class="nav-link" routerLink="./sizes" routerLinkActive="active">
+          <img src="/assets/admin-icons/ruler.svg" alt="" class="link-icon">
+          <span class="nav-link-text">Sizes</span>
+        </a>
+      </li>
     </ul>
   </perfect-scrollbar>
   <perfect-scrollbar style="max-width: 100%; max-height: 100vh;">
