--- a/src/app/admin/products/change-quantity/change-quantity.component.scss
+++ b/src/app/admin/products/change-quantity/change-quantity.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../variables';
+
 form {
   max-width: 300px;
   .form-group {
@@ -31,5 +33,10 @@ form {
     font-style: italic;
     padding-left: 15px;
     color: #ccc;
+    margin-bottom: 20px;
+  }
+  .button-wrapper {
+    display: inline-block;
+    margin-left: 25px;
   }
 }
