Handle adding and deleting sizes in admin.

--- a/src/app/admin/categories/categories-list/categories-list.component.html
+++ b/src/app/admin/categories/categories-list/categories-list.component.html
@@ -6,7 +6,7 @@
       (selectedChange)="onSelectedChange($event)">
     </ngx-treeview>
   </div>
-  <div class="categories-actions-container">
+  <div class="categories-actions-container box-with-shadow">
     <app-categories-actions [selectedSubcategories]="selectedSubcategories"></app-categories-actions>
   </div>
 </div>
