Change displaying images in blog.

--- a/src/app/admin/products/admin-product/admin-product.component.html
+++ b/src/app/admin/products/admin-product/admin-product.component.html
@@ -15,7 +15,7 @@
     <div *ngIf="!product.quantity">0</div>
     <button class="btn-edit" (click)="changeQuantity()">
       <span class="tooltiptext">Change</span>
-      <img src="/assets/pencil-edit-button.svg" alt="">
+      <img src="../../../../assets/pencil-edit-button.svg" alt="">
     </button>
   </div>
 </td>
