--- a/src/app/users/user/user.component.scss
+++ b/src/app/users/user/user.component.scss
@@ -68,7 +68,7 @@ td {
     border-radius: 5px;
     outline-radius: 5px;
     appearance: none;
-    background: url('/src/assets/arrow.png') 96% / 10px no-repeat #eee;
+    background: url('../../../assets/arrow.png') 96% / 10px no-repeat #eee;
     &:focus {
       outline: none;
       border: 1px solid rgb(77, 144, 254);
