Change paths from assets.

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -2,7 +2,7 @@
   <perfect-scrollbar style="max-width: 300px; max-height: 100vh;">
     <div class="menu-header">
       <div class="header-img-wrapper">
-        <img src="../../assets/default-avatar.png" alt="" class="menu-header-img">
+        <img src="/assets/default-avatar.png" alt="" class="menu-header-img">
       </div>
       <span class="menu-header-text">Admin</span>
     </div>
