--- a/src/app/shop/wishlist/wishlist-item/wishlist-item.component.html
+++ b/src/app/shop/wishlist/wishlist-item/wishlist-item.component.html
@@ -1,7 +1,7 @@
 <div class="wishlist-item-container" hover activeClass="active" [el]="[addBlock, heartIcon, deleteBlock, detailsBlock]">
   <div class="img-box" (click)="openProductDetails()">
     <img [src]="imagePath" alt="" class="wishlist-img">
-    <img src="../../../../assets/red-heart.svg" alt="" class="heart-icon" #heartIcon>
+    <img src="/assets/red-heart.svg" alt="" class="heart-icon" #heartIcon>
   </div>
   <div class="content-box">
     <div class="block">
@@ -14,12 +14,12 @@
         <div class="discount" *ngIf="wishlistItem.discount">${{wishlistItem.discount}}</div>
       </div>
       <div class="additional-block details-block" #detailsBlock (click)="openProductDetails()">
-        <img src="../../../../assets/shop/eye.svg" alt="" class="icon">
+        <img src="/assets/shop/eye.svg" alt="" class="icon">
         <div class="text add-text">Watch Details</div>
       </div>
       <div class="additional-block" #addBlock (click)="addProductToCart()">
         <ng-container *ngIf="!addToCartWasClicked">
-          <img src="../../../../assets/shop/bag.svg" alt="" class="icon">
+          <img src="/assets/shop/bag.svg" alt="" class="icon">
           <div class="text">Add to Cart</div>
         </ng-container>
         <ng-select *ngIf="addToCartWasClicked" [items]="sizes"
@@ -27,7 +27,7 @@
         </ng-select>
       </div>
       <div class="additional-block delete-block" #deleteBlock (click)="deleteProductFromWishlist()">
-        <img src="../../../../assets/waste-bin.svg" alt="" class="icon">
+        <img src="/assets/waste-bin.svg" alt="" class="icon">
         <div class="text delete-text">Delete</div>
       </div>
     </div>
