--- a/src/app/blog/posts/post-details/post-details.component.scss
+++ b/src/app/blog/posts/post-details/post-details.component.scss
@@ -156,10 +156,10 @@
     }
   }
   .arrow-right {
-    background-image: url('/src/assets/arrow-right.png');
+    background-image: url('/assets/arrow-right.png');
   }
   .arrow-left {
-    background-image: url('/src/assets/arrow-left.png');
+    background-image: url('/assets/arrow-left.png');
     &:before {
       content: "|";
       position: absolute;
